v3.7.1-rc.1 (XXXX-XX-XX)
------------------------

* Fixed a race in the ConnectionPool which could lease out a connection that got
  its idle timeout after the lease was completed. This could lead to sporadic
  network failures in TLS and to inefficiencies with TCP.

* Fixed restoring a SmartGraph into a database that already contains that same
  graph.
  The use case is restoring a SmartGraph from backup, apply some modifications,
  which are undesired, and then resetting it to the restored state, without
  dropping the database. One way to achieve this is to use arangorestore with
  the `overwrite` option on the same dataset, effectively resetting the
  SmartGraph to the original state. Without this fix, the workaround for is to
  either drop the graph (or the database) before the restore call, yielding an
  identical result.

* Fixed potential garbled output in syslog log output for the program name.

* Fixed infinite recursion when printing error messages about invalid logger
  configuration on startup.

* Fixed sporadic use-after-free ASan issue in logger shutdown.

* Added missing state rollback for failed attempt-based write locking of spin
  locks.

* Disable internal network protocol switch for cluster-internal communication,
  and hard-code the internal communication protocol to HTTP.

* Added vertex collection validation in case of a SmartGraph edge definition
  update.

* Fix cluster-internal request forwarding for VST requests that do not have any
  Content-Type header set. Such requests could have been caused by the Java
  driver (ES-635).

* Fixed issue OASIS-252: Hotbackup agency locks without clientId.

* Fixed internal-issue #726: added restore handling for custom analyzers.

* Updated arangosync to 0.7.7.

* Fixed a potential agency crash if trace logging is on.

* Network layer now reports connection setup issues in more cases this replaces
  some INTERNAL_ERROR reports by more precise errors, those are only reached
  during failover scenarios.